auth, product list page

--- a/ios/mobile/Info.plist
+++ b/ios/mobile/Info.plist
@@ -69,6 +69,7 @@
 		<string>Nunito-Regular.ttf</string>
 		<string>Nunito-SemiBold.ttf</string>
 		<string>Nunito-SemiBoldItalic.ttf</string>
+        <string>Feather.ttf</string>
 	</array>
 </dict>
 </plist>
