--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     },
     "dependencies": {
         "@react-native-community/async-storage": "^1.7.1",
+        "@react-native-community/netinfo": "^5.3.3",
         "axios": "^0.19.0",
         "immer": "^5.1.0",
+        "lodash": "^4.17.15",
         "react": "16.9.0",
         "react-native": "0.61.5",
+        "react-native-animatable": "^1.3.3",
         "react-native-gesture-handler": "^1.5.2",
         "react-native-reanimated": "^1.4.0",
         "react-native-screens": "^2.0.0-alpha.22",
         "react-native-vector-icons": "^6.6.0",
         "react-navigation": "^4.0.10",
+        "react-navigation-animated-switch": "^0.4.1",
         "react-navigation-tabs": "^2.6.2",
         "react-redux": "^7.1.3",
         "reactotron-react-native": "^4.0.2",
@@ -28,7 +32,8 @@
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.1.3",
-        "styled-components": "^4.4.1"
+        "styled-components": "^4.4.1",
+        "yup": "^0.28.1"
     },
     "devDependencies": {
         "@babel/core": "^7.7.7",
